get all blogs and is done
